--- a/Ready_to_Run/GLOSSA.exe.config
+++ b/Ready_to_Run/GLOSSA.exe.config
@@ -23,10 +23,13 @@
                 <value />
             </setting>
             <setting name="WorkingPath" serializeAs="String">
-                <value />
+                <value>file:///C:/Users</value>
             </setting>
             <setting name="WinLocation" serializeAs="String">
                 <value>0, 0, 0, 0</value>
+            </setting>
+            <setting name="TreeFont" serializeAs="String">
+                <value>Consolas, 9pt</value>
             </setting>
             <setting name="RichCodeVCP" serializeAs="String">
                 <value>False</value>
@@ -35,16 +38,16 @@
                 <value>False</value>
             </setting>
             <setting name="RichCodeSeleColor" serializeAs="String">
-                <value />
+                <value>Blue</value>
             </setting>
             <setting name="RichCodeNumColor" serializeAs="String">
-                <value />
+                <value>DarkGoldenrod</value>
             </setting>
             <setting name="RichCodePreakColor" serializeAs="String">
-                <value />
+                <value>Red</value>
             </setting>
             <setting name="RichCodeCurrentLColor" serializeAs="String">
-                <value />
+                <value>192, 255, 192</value>
             </setting>
             <setting name="Register" serializeAs="String">
                 <value />
